<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/pad"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lay_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_card1"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_weight="@dimen/weight"
            android:scaleType="centerInside"
            android:src="@drawable/black_joker" />

        <ImageView
            android:id="@+id/iv_card2"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_weight="@dimen/weight"
            android:scaleType="centerInside"
            android:src="@drawable/black_joker" />
    </LinearLayout>

    <Button
        android:id="@+id/b_deal"
        android:layout_width="@dimen/b_deal_width"
        android:layout_height="@dimen/b_deal_height"
        android:layout_below="@id/lay_cards"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marTop"
        android:backgroundTint="@color/btn"
        android:text="@string/btn"
        android:textSize="@dimen/t_size" />

    <LinearLayout
        android:id="@+id/lay_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="@dimen/weight"
            android:text="@string/p1"
            android:textAlignment="center"
            android:textSize="@dimen/t_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="@dimen/weight"
            android:text="@string/p2"
            android:textAlignment="center"
            android:textSize="@dimen/t_size"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_war"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_deal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mt"
        android:text="@string/war"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_highest_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_war"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mt"
        android:textSize="@dimen/t_size"
        android:textStyle="italic" />

    <Button
        android:id="@+id/b_replay"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_below="@id/tv_highest_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mt"
        android:layout_weight="@dimen/weight"
        android:backgroundTint="@color/btn"
        android:text="@string/replay"
        android:textSize="@dimen/btn_textSize" />

    <Button
        android:id="@+id/b_home"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_below="@id/b_replay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:layout_weight="@dimen/weight"
        android:backgroundTint="@color/btn"
        android:text="@string/backHome"
        android:textSize="@dimen/btn_textSize" />

</RelativeLayout>

